[gd_scene load_steps=4 format=3 uid="uid://c7aikcp5gppca"]

[ext_resource type="Script" path="res://SinglePlayer/SinglePlayerMenu.gd" id="1_oyb8u"]
[ext_resource type="FontFile" uid="uid://f4pv31bv20w0" path="res://assets/PoetsenOne-Regular.ttf" id="2_veohf"]

[sub_resource type="LabelSettings" id="LabelSettings_yesil"]
font = ExtResource("2_veohf")
font_size = 40

[node name="SinglePlayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_oyb8u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -183.0
offset_right = 183.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titulo" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "PONG GAME"
label_settings = SubResource("LabelSettings_yesil")

[node name="BoxMenu" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerName" type="TextEdit" parent="VBoxContainer/BoxMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "                                  Enter Name"

[node name="PlayerColor" type="ColorPickerButton" parent="VBoxContainer/BoxMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="EasyButton" type="Button" parent="VBoxContainer/BoxMenu"]
layout_mode = 2
text = "Easy"

[node name="MediumButton" type="Button" parent="VBoxContainer/BoxMenu"]
layout_mode = 2
text = "Medium "

[node name="HardButton" type="Button" parent="VBoxContainer/BoxMenu"]
layout_mode = 2
text = "Hard"

[node name="BackButton" type="Button" parent="VBoxContainer/BoxMenu"]
layout_mode = 2
text = "Back"

[connection signal="color_changed" from="VBoxContainer/BoxMenu/PlayerColor" to="." method="_on_player_color_color_changed"]
[connection signal="pressed" from="VBoxContainer/BoxMenu/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BoxMenu/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BoxMenu/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BoxMenu/BackButton" to="." method="_on_back_button_pressed"]
